--- a/src/styles/Curso.css
+++ b/src/styles/Curso.css
@@ -1,24 +1,49 @@
 .containerCurso {
-  width: 90%;
-  height: 28rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: darkblue;
+  border-radius: 2rem;
+  animation-name: curso;
+  animation-duration: 1s;
+  animation-fill-mode: backwards;
+  animation-delay: 1s;
 }
 
-.containerCurso img {
+@keyframes curso {
+  from {
+    transform: translateX(-10000px);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+.effect {
   width: 100%;
-  height: 20rem;
+  height: 100%;
+  display: flex;
+  border-radius: 2rem;
+  box-sizing: border-box;
+  padding: 2rem;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.74) 82%
+  );
+  text-overflow: clip;
 }
 
 .containerCurso .titulo {
-  font-family: Rubik;
+  align-self: flex-end;
+  font-family: Ubuntu;
   font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 110%;
-
-  color: #10203f;
+  font-weight: bold;
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 .containerCurso .descricao {
